2006-09-13  Quentin Mathe <qmathe@club-internet.fr>

    * EtoileMenuTitleView.h
    * EtoileMenuTitleView.m
    (-isTitleVisible) (-setTitleVisible:): New methods.
    (-init): Modified to init titleVisible variable.
    (-drawRect:): Modified to draw the title only when titleVisible is YES.
    * NSMenuView+Hackery.m (-update): Modified to make the title visible only 
    when the menu is torn off.

2006-08-07  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile: Added GNUSTEP_INSTALLATION_DIR to have the bundle installed 
    in System/Library rather than Local/Library.

2006-03-04  Saso Kiselkov <diablos@manga.sk>

    Update based on 2006-03-04 21:03 version.
    * NSMenu+Hackery.m:
    * GSHorizontalMenuItemCell.m:
    * NSMenuItemCell+Hackery.m:
    * NSMenuView+Hackery.m:
    Updated.

2006-03-04  Saso Kiselkov <diablos@manga.sk>

    * ChangeLog:
    * EtoileMenuTitleView.h:
    * EtoileMenuTitleView.m:
    * EtoileMenuUtilities.h:
    * GNUmakefile:
    * GNUmakefile.preamble:
    * GSHorizontalMenuItemCell.h:
    * GSHorizontalMenuItemCell.m:
    * GSHorizontalMenuView.h:
    * GSHorizontalMenuView.m:
    * GSTitleView+Hackery.h:
    * GSTitleView+Hackery.m:
    * MenuBarHeight.h:
    * MHMenuItemCell.h:
    * MHMenuItemCell.m:
    * NSApplication+Hackery.h:
    * NSApplication+Hackery.m:
    * NSBezierPath+Hackery.h:
    * NSBezierPath+Hackery.m:
    * NSMenu+Hackery.h:
    * NSMenu+Hackery.m:
    * NSMenuItemCell+Hackery.h:
    * NSMenuItemCell+Hackery.m:
    * NSMenuView+Hackery.h:
    * NSMenuView+Hackery.m:
    * README:
    * Images/EtoileMenuCloseH.tiff:
    * Images/EtoileMenuClose.tiff:
    * Images/MenuBarFiller.tiff:
    * Images/MenuTitleFiller.tiff:
    * Images_src/CloseButtonH.xcf:
    * Images_src/CloseButton.xcf:
    Initial import for EtoileWildMenus, major refactoring done by Saso Kiselkov 
    on WildMenus (the other part of the menu bar support has been imported in 