@@ -1,6 +1,2 @@
 
 ADDITIONAL_OBJCFLAGS+= -W -Wall -Wno-unused -Wno-import
-
-ifeq ($(debug), yes)
-  ADDITIONAL_OBJCFLAGS += -O0 -ggdb3
-endif
