@@ -1,3 +1,12 @@
+2006-12-04  Saso Kiselkov <skiselkov@gmail.com>
+
+    * NSMenu+Hackery.m:
+    * GSHorizontalMenuView.m:
+    * GNUmakefile.preamble:
+    * NSMenu+Hackery.h:
+    * NSMenuView+Hackery.m: Fixed menu layout-related crashes on newer
+      GNUstep releases.
+
 2006-09-13  Quentin Mathe <qmathe@club-internet.fr>
 
     * EtoileMenuTitleView.h
